--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,17 @@
 body{
-  font-family: Helvetica, sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 /* Navbar */
-.navbar-brand img{
-  width: 120px;
+.w3-bar img{
+  width: 100px;
+  margin-left: 30px;
 }
-.navbar-light .navbar-nav .nav-item{
-  margin-left: 20px;
+.w3-right{
+  padding-top: 15px;
+  margin-right: 30px;
+  font-weight: bold;
+  color: #135375;
 }
-.dropdown:hover>.dropdown-menu {
-  display: block;
-}
-
-
 /*SLIDER*/
 @media screen and (min-width: 600px) {
 .carousel-caption{
@@ -35,4 +34,15 @@ body{
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
+}
+.w3-quarter i{
+  font-size: 3em;
+  color: #135375;
+}
+.w3-quarter .w3-large{
+  margin-top: 30px;
+}
+.blue_button{
+  background-color: #135375;
+  color: rgb(255,255,255);
 }
